# autoscorer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  install.sh  main.py  pip.conf  pyproject.toml  pytest.ini
celery_app/: tasks.py  worker.py
custom_scorers/: example_scorers.py  hot_reload_test.py  hot_reload_test_v4.py
docs/: ALGORITHM_STANDARD.md  DEPLOYMENT.md  ERROR_HANDLING.md  IMPLEMENTATION_SUMMARY.md  INPUT_SPEC.md  OUTPUT_STANDARDS.md  PLATFORM_INTEGRATION.md  README.md  REPO_HYGIENE.md  SCHEDULER_STANDARD.md  SCORERS.md  SCORING_ALGORITHMS.md  TECH_DESIGN.md  api-reference.md  cli-guide.md  configuration.md  error-handling.md  executors.md  extensions.md  getting-started.md  output-standards.md  overview.md  platform-integration.md  scorer-development.md  workspace-spec.md
examples/classification/: meta.json
examples/classification-acc/: meta.json
examples/classification-acc/input/: gt.csv
examples/classification-acc/output/: pred.csv
examples/classification/logs/: run_info.json
examples/classification/output/: pred.csv  result.json
examples/detection/: meta.json
examples/detection/input/: gt.json
examples/detection/output/: pred.json
examples/hot_reload_test/: meta.json
examples/hot_reload_test/output/: pred.csv  result.json
examples/regression/: meta.json
examples/regression/input/: gt.csv
examples/regression/logs/: run_info.json
examples/text_event/: README.md  meta.json
examples/text_event/input/: gt.csv
src/autoscorer/: cli.py  pipeline.py  scheduler.py
tests/: README.md
(+26 files in other folders)
