[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoscorer"
version = "0.1.0"
description = "Container-executed, plugin-based scoring system for ML competitions"
authors = [{ name = "shiguodong", email = "shiguodong@stonehg.com" }]
requires-python = ">=3.10"
readme = "README.md"
keywords = ["ml", "competition", "scoring", "docker", "k8s", "celery"]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "docker>=7.0",
  "kubernetes>=30.1",
  "redis>=5.0",
  "celery>=5.4",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
autoscorer = "autoscorer.cli:app"
autoscorer-api = "autoscorer.api.run:main"

